SFISSUES-1030 resolved the issue of the overlapping drop down

--- a/src/Base/main/default/aura/Sales_Service_Calendar_dh/Sales_Service_Calendar_dh.css
+++ b/src/Base/main/default/aura/Sales_Service_Calendar_dh/Sales_Service_Calendar_dh.css
@@ -33,7 +33,7 @@
 }
 
 .THIS .cal-container > .calendar-filters {
-  z-index:98;
+
   width:225px;
   position:absolute;
   right:-300px;
